fix(message): remove overflow on message

--- a/web-client/www/src/css/main.css
+++ b/web-client/www/src/css/main.css
@@ -1775,3 +1775,6 @@ summary::marker {
 revoice-textarea {
     width: -webkit-fill-available;
 }
+revoice-message {
+    overflow: visible;
+}
